feat: add , remove

--- a/src/app/components/product-add/product-add.component.html
+++ b/src/app/components/product-add/product-add.component.html
@@ -1,7 +1,7 @@
 <p>product-add works!</p>
-{{product | json}}
+{{ product | json }}
 <form (ngSubmit)="onSubmit()">
-    <input type="text" [(ngModel)]="product.name" placeholder="name" name="name">
-    <input type="number" [(ngModel)]="product.price" placeholder="price" name="price">
+    <input type="text" [(ngModel)]="product.name" placeholder="name" name="name" />
+    <input type="number" [(ngModel)]="product.price" placeholder="price" name="price" />
     <button>Add</button>
 </form>
