--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,17 +1,15 @@
+<p>products works!</p>
 <table class="table table-bordered">
-  <tbody>
-      <tr *ngFor="let product of productList; let i = index">
-          <td>{{ i + 1 }}</td>
-          <td>{{ product.name }}</td>
-          <td>{{ product.price }}</td>
-          <td>
-              <button class="btn btn-info" (click)="showDetail(product.id)">Info</button>
-          </td>
-      </tr>
-  </tbody>
+    <tbody>
+        <tr *ngFor="let product of productList; let i = index">
+            <td>{{ i + 1 }}</td>
+            <td>{{ product.name }}</td>
+            <td>{{ product.price }}</td>
+            <td>
+                <button class="btn btn-info">Info</button>
+                <button routerLink="/product/{{ product.id }}">Detail</button>
+                <button class="btn btn-primary" (click)="onRemoveItem(product.id)">Remove</button>
+            </td>
+        </tr>
+    </tbody>
 </table>
-<div *ngIf="productDeail">
-  {{ productDeail.name }}
-  <hr>
-  {{ productDeail.price }}
-</div>
