--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
+<!-- <h1>Hello</h1>
+<app-hello [data]="myName"></app-hello>
+<app-product [data]="productList"></app-product>
+<app-product-add (onAdd)="onHandleAdd($event)"></app-product-add> -->
 <router-outlet></router-outlet>
+<app-product-add></app-product-add>
