--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -17,9 +17,9 @@
     <thead>
       <tr>
         <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
+        <th scope="col">Name</th>
+        <th scope="col">Price</th>
+        <th scope="col">Starus</th>
         <th scope="col"></th>
 
       </tr>
