--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,4 @@
 <app-product [data]="productList"></app-product>
 <app-product-add (onAdd)="onHandleAdd($event)"></app-product-add> -->
 <router-outlet></router-outlet>
-<app-product-add></app-product-add>
+<!-- <app-product-add></app-product-add> -->
