--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
 <app-hello [data]="myName"></app-hello>
 <app-product [data]="productList"></app-product>
 <app-product-add (onAdd)="onHandleAdd($event)"></app-product-add> -->
+<app-header></app-header><br>
 <router-outlet></router-outlet>
-<!-- <app-product-add></app-product-add> -->
