--- a/src/app/product-edit/product-edit.component.html
+++ b/src/app/product-edit/product-edit.component.html
@@ -1,5 +1,5 @@
 <form (ngSubmit)="onUpdate()">
     <input type="text" [(ngModel)]="product.name" placeholder="name" name="name">
     <input type="number" [(ngModel)]="product.price" placeholder="price" name="price">
-    <button>Edit</button>
+    <button>Add</button>
 </form>
