--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,24 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-success">
+    <div class="container">
+      <a class="navbar-brand" href="" >Home</a>
+      
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/products">Product</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/register">Register</a>
+          </li>
+          
+        </ul>
+        
+      </div>
+    </div>
+  </nav>
